--- a/package.json
+++ b/package.json
@@ -30,9 +30,18 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
+    "env": {
+      "browser": true,
+      "cypress/globals": true
+    },
+    "plugins": [
+      "react",
+      "cypress"
+    ],
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:cypress/recommended"
     ]
   },
   "browserslist": {
@@ -49,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "cypress": "^13.13.1"
+    "cypress": "^13.13.1",
+    "eslint-plugin-cypress": "^3.3.0"
   }
 }
