--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-konva": "18.0.0-0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
